--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 
 <head>
     <meta charset=utf-8/>
+    <link rel="stylesheet" href="style.css">
+    <title>ic-05</title>
+
 </head>
 
 
 <body>
 
+<h1>Intro to JavaScript</h1>
+
+<div>
+    <button type = "button">Click me!</button>
+    <div id = "button-div" class ="gen">
+
+    </div>
+</div>
+
+<h3>Counter:</h3>
+<label id="count"></label><br><br>
+<button onclick="counterFunc()">Click</button>
 
 </body>
 
